// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render gallery 1`] = `
<div>
  <Header
    gotoMainSiteHandler={[Function]}
    isShowImage={false}
  />
  <div
    className="container"
  >
    <Gallery
      gotoImageHandler={[Function]}
      imageList={null}
    />
  </div>
</div>
`;

exports[`App should render single image 1`] = `
<div>
  <Header
    gotoMainSiteHandler={[Function]}
    isShowImage={true}
  />
  <div
    className="container"
  >
    <Image
      addCommentHandler={[Function]}
      addLikeHandler={[Function]}
      image="firtst"
      imageId={0}
    />
  </div>
</div>
`;
